--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                 <h3 class="section-subheading text-muted">Pro více informací rozklikněte službu.</h3>
             </div>
         </div>
-        <div class="row d-flex">
-            <div class="row col-lg-6 d-flex flex-column ">
+        <div class="row d-flex justify-content-center">
+            <div class="row col-lg-6 d-flex flex-column">
                 <div class="col-lg mb-4 d-flex justify-content-end">
                     <!-- Portfolio item 2-->
                     <div class="portfolio-item">
@@ -172,14 +172,52 @@
                             </div>
                         </div>
                     </div>
-                    <div class="mb-3">
+                    <div>
                         <label for="strecha_select" class="form-label">Střecha</label>
-                        <select class="form-select" aria-label="Vyberte typ střechy" id="strecha_select">
-                            <option value="1">Sedlová</option>
-                            <option value="2">Pultová</option>
-                            <option value="3">Válbová</option>
-                            <option value="3">Rovná</option>
-                        </select>
+                        <div class="mb-3 d-flex">
+                            <div class="form-check text-center">
+                                <input class="form-check-input" type="radio" name="exampleRadios" id="sedlova"
+                                    value="sedlova" checked>
+
+
+                                <label class="form-check-label" for="sedlova">
+                                    Sedlová
+                                    <img src="./img/ostatni/sedlova-strecha-model.jpg" style="width: 12rem;"
+                                        alt="Boat on Calm Water" />
+                                </label>
+                            </div>
+                            <div class="form-check text-center">
+                                <input class="form-check-input" type="radio" name="exampleRadios" id="pultova"
+                                    value="pultova">
+
+                                <label class="form-check-label" for="pultova">
+                                    Pultová
+
+                                    <img src="./img/ostatni/pultova-strecha-model.jpg" style="width: 15rem;"
+                                        alt="Boat on Calm Water" />
+                                </label>
+                            </div>
+                            <div class="form-check text-center">
+                                <input class="form-check-input" type="radio" name="exampleRadios" id="valbova"
+                                    value="valbova">
+
+                                <label class="form-check-label" for="valbova">
+                                    Válbová
+                                    <img src="./img/ostatni/valbova-strecha-model.jpg" style="width: 15rem;"
+                                        alt="Boat on Calm Water" />
+                                </label>
+                            </div>
+                            <div class="form-check text-center">
+                                <input class="form-check-input" type="radio" name="exampleRadios" id="rovna"
+                                    value="option2">
+
+                                <label class="form-check-label" for="rovna">
+
+                                    Jiná
+
+                                </label>
+                            </div>
+                        </div>
                     </div>
                     <div class="row w-100">
                         <div class="col">
@@ -203,8 +241,14 @@
                             </div>
                         </div>
                     </div>
+                    <div class="form-check w-100">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        <label class="form-check-label" for="flexCheckDefault">
+                            Mám zájem o vyřízení dotace
+                        </label>
+                    </div>
                     <div class="row">
-                        <label class="form-label my-3">Vaše spotřeba</label>
+                        <label class="form-label my-3 h5">Vaše spotřeba</label>
                         <div class="col-sm">
                             <div class="mb-3 form-check">
                                 <input type="checkbox" class="form-check-input" id="solar_boiler">
@@ -231,25 +275,31 @@
                                 <label class="form-check-label" for="solar_bazen">Bazén</label>
                             </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <label class="col form-label my-3">Mám zájem o vyřízení dotace</label>
-                        <input type="checkbox" class="col" id="solar_elektricke_topeni">
+
+
                     </div>
                     <button class="btn btn-primary">Mám zájem o nabídku</button>
                     <button onclick="solarForm();" class="btn btn-secondary">Vypočítat cenu elektrárny</button>
                     <p class="m-3" id="solar_cena_output">Vaše solární instalace bude stát x Kč</p>
                 </div>
             </div>
-            <div class="mt-5 w-75 w-sm-100 pt-5 m-auto">
+        </div>
+
+    </section>
+    <div class="parallax"></div>
+
+    <section class="page-section">
+        <div class="container justify-content-between">
+
+            <div class="w-75 w-sm-100 m-auto">
                 <h2 class="section-heading text-uppercase">Tepelný kalkulátor</h2>
 
                 <div>
                     <div class="row">
                         <div class="col">
                             <div class="mb-3">
-                                <label for="teplo_pocet_lidi" class="form-label">Počet lidí</label>
-                                <input type="number" class="form-control" id="teplo_pocet_lidi">
+                                <label for="odhadovany_teplo" class="form-label">Odhadovaný tepelný výkon (v kW)</label>
+                                <input type="number" class="form-control" id="odhadovany_teplo">
                             </div>
                         </div>
                     </div>
@@ -261,8 +311,14 @@
                             <option value="3">Zděná</option>
                         </select>
                     </div>
+                    <div class="form-check w-100">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        <label class="form-check-label" for="flexCheckDefault">
+                            Mám zájem o vyřízení dotace
+                        </label>
+                    </div>
                     <div class="row">
-                        <label class="form-label my-3">Vaše spotřeba</label>
+                        <label class="form-label my-3 h6">Vaše spotřeba</label>
                         <div class="col-sm">
                             <div class="mb-3 form-check">
                                 <input type="checkbox" class="form-check-input" id="teplo_ohrev_vody">
@@ -301,7 +357,6 @@
     </section>
 
     <!-- Container element -->
-    <div class="parallax"></div>
 
     <!-- Team-->
     <section class="page-section bg-light" id="team">
@@ -411,9 +466,6 @@
                             <li class="dropdown-item"
                                 onclick="document.getElementById('subject_input').value = 'Elektroinstalace';">
                                 Elektroinstalace</li>
-                            <li class="dropdown-item"
-                                onclick="document.getElementById('subject_input').value = 'Horolezectví a zimní kurzy';">
-                                Horolezectví a zimní kurzy</li>
                         </ul>
                     </div>
 
@@ -515,7 +567,9 @@
                                         </ul>
                                         <button class="btn btn-success btn-xl text-uppercase" data-bs-dismiss="modal"
                                             type="button">
+                                            <a href="contact">
                                             Objednat
+                                            </a>
                                         </button>
                                         <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal"
                                             type="button">
